--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'show_paket' %}">Langganan Paket</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'podcast_list' %}">Play Podcast</a>
+                    </li>
                     {% endif %}
                     {% if request.session.is_premium %}
                     <li class="nav-item">
@@ -41,7 +44,7 @@
                     {% endif %}
                     {% if 'Podcaster' in request.session.roles %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_podcast' %}">Kelola Podcast</a>
+                        <a class="nav-link" href="{% url 'podcast_management' %}">Kelola Podcast</a>
                     </li>
                     {% endif %}
                     {% if 'Artist' in request.session.roles or 'Songwriter' in request.session.roles %}
