--- a/play_podcast/templates/PlayPodcast.html
+++ b/play_podcast/templates/PlayPodcast.html
@@ -9,61 +9,66 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Play Podcast</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .Title {
-            text-align: center;
-            margin-top: 50px;
-        }
-        h1 {
-            font-weight: normal;
-        }
-        h2 {
-            margin-top: 20px;
-        }
-        .input-box, .select-box {
-            width: 300px;
-            padding: 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            text-align: left;
-            padding: 8px;
-        }
-        th {
-            background-color: white;
-        }
-        .back-button {
-            background-color: blue;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .button-wrapper {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-    </style>
+
+{% block css %}
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    .Title {
+        text-align: center;
+        margin-top: 50px;
+    }
+    h1 {
+        font-weight: normal;
+    }
+    h2 {
+        margin-top: 20px;
+    }
+    .input-box, .select-box {
+        width: 300px;
+        padding: 5px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        box-sizing: border-box;
+    }
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+    th, td {
+        border: 1px solid black;
+        text-align: left;
+        padding: 8px;
+    }
+    th {
+        background-color: white;
+    }
+    .back-button {
+        background-color: blue;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    .button-wrapper {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
 </head>
 <body>
     <div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
@@ -82,7 +87,7 @@
         <p style="margin: 0; padding-top: 0;">- {{ podcast.podcaster }}</p>
         <p style="margin: 0; padding-top: 0;">Total Durasi: {{ podcast.total_durasi }}</p>
         <p style="margin: 0; padding-top: 0;">Tanggal Rilis: {{ podcast.tanggal_rilis }}</p>
-        <p style="margin: 0; padding-top: 0;">Tahun: {{ podcast.tahun }}</p>
+        <p style="margin: 0; padding-top: 0;">Tahun: {{ podcast.tahun_rilis }}</p>
     </div>
 
     <div class="button-wrapper">
@@ -117,3 +122,4 @@
     </table>
 </body>
 </html>
+{% endblock %}
