--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Marmut - 9</a>
+            <a class="navbar-brand" >Marmut - 9</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
                     {% endif %}
                     {% if request.session.is_premium %}
                     <li class="nav-item">
-                        {% comment %} <a class="nav-link" href="{% url 'kelola_downloaded_songs' %}">Kelola Downloaded Songs</a> {% endcomment %}
+                        <a class="nav-link" href="{% url 'downloaded_songs' %}">Kelola Downloaded Songs</a>
                     </li>
                     {% endif %}
                     {% if 'Podcaster' in request.session.roles %}
@@ -62,7 +62,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link logout-button" href="{% url 'logout' %}">Logout</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -70,3 +70,26 @@
         </div>
     </nav>
 </header>
+
+<style>
+    .logout-button {
+        background-color: #42BCFF;
+        color: white !important;
+        padding: 10px 20px;
+        border-radius: 5px;
+        text-align: center;
+    }
+    
+    .logout-button:hover {
+        background-color: #359FD9;
+        color: white !important;
+    }    
+
+    .nav-item:hover {
+        color: #42BCFF;
+    }
+
+    .nav-link:hover {
+        color: #42BCFF !important;
+    }
+</style>
