--- a/authentication/templates/register_label.html
+++ b/authentication/templates/register_label.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Register as Label{% endblock %}
+{% block title %}Register Label{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="register-container">
-        <h2>Register as Label</h2>
+        <h2>Register Label</h2>
         <form action="/register_label/" method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -28,6 +28,13 @@
         </form>
     </div>
 </div>
+
+{% if error_message %}
+<script>
+    alert("{{ error_message|escapejs }}");
+</script>
+{% endif %}
+
 {% endblock %}
 
 {% block css %}
@@ -41,7 +48,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: calc(100vh - 56px); /* Subtract the height of the navbar */
+        height: calc(100vh - 56px);
     }
     .register-container {
         background-color: white;
