--- a/authentication/templates/register_pengguna.html
+++ b/authentication/templates/register_pengguna.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Register as User{% endblock %}
+{% block title %}Register Pengguna{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="register-container">
-        <h2>Register as User</h2>
+        <h2>Register Pengguna</h2>
         <form action="/register_pengguna/" method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -49,6 +49,13 @@
         </form>
     </div>
 </div>
+
+{% if error_message %}
+<script>
+    alert("{{ error_message|escapejs }}");
+</script>
+{% endif %}
+
 {% endblock %}
 
 {% block css %}
@@ -59,6 +66,7 @@
         background-color: #42BCFF;
     }
     .content {
+        margin-top: 60px;
         display: flex;
         justify-content: center;
         align-items: center;
